sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:9: error: not found: value j
    while (j > 0 && getValeur(w-1) > v) {
           ^AlgInsertionSort:16: error: not found: value j
    setValeur(j,v)
              ^