sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  
  for (i <- 1 to getNombreValeurs()-1) {
    
    var v = getValeur(i)
    var w = i
    
    while (j > 0 && getValeur(w-1) > v) {
      
      echange(w,w-1)
      w = w - 1
      
    }
    
    setValeur(j,v)
    
  }
  
}